<resources>
    <string name="app_name">My Application</string>
    <string name="aboutapp">Данное приложение предназначено для проектировки кровельных работ</string>
    <string name="decriptionText">Программа "Справочник для проектировки кровельных работ" - это инструмент, разработанный для помощи в проектировании и строительстве крыш. Она предоставляет широкий спектр функций, включая: </string>
    <string name="decriptionText1">Этот справочник облегчает процесс проектирования и строительства кровли, предоставляя необходимую информацию и инструменты для принятия обоснованных решений и обеспечивая качественный результат. </string>
    <string name="decriptionRoof">Расчет крыши: Пользователи могут легко ввести параметры своей крыши, такие как форма, площадь, наклон и другие, и программа предоставит расчеты для определения необходимых материалов, количества плит и других параметров. </string>
    <string name="decriptionStrapila">Расчет стропильной системы: Программа позволяет проектировать стропильную систему с учетом требуемой нагрузки, выбирая оптимальное расположение стропил, и предоставляет расчеты на прочность и стабильность </string>
    <string name="decriptionMaterial">Предоставление информации о материалах: Справочник содержит обширную базу данных о различных материалах, используемых для кровли, включая кровельные плиты, битумные материалы, металлические покрытия и многое другое. Пользователи могут получить информацию о характеристиках, стоимости и преимуществах различных материалов. </string>
    <string name="decriptionBuild">Методы сборки: Программа предоставляет советы и инструкции по методам сборки крыши, включая укладку и крепление материалов, гидроизоляцию и другие важные аспекты, чтобы обеспечить долговечность и надежность кровли. </string>

</resources>