<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:alpha="0.15"
        android:src="@drawable/back"/>

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutapp"
        android:layout_marginHorizontal="30sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/descriptiontext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginTop="20sp"
        android:text="@string/decriptionText" />
    <TextView
        android:id="@+id/descriptiontext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptiontext"
        android:layout_marginTop="20sp"
        android:text="@string/decriptionText1" />
    <TextView
        android:id="@+id/descriptionRoof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptiontext1"
        android:layout_marginTop="20sp"
        android:text="@string/decriptionRoof" />
    <TextView
        android:id="@+id/descriptionStrapila"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionRoof"
        android:layout_marginTop="20sp"
        android:text="@string/decriptionStrapila" />
    <TextView
        android:id="@+id/descriptionMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionStrapila"
        android:layout_marginTop="20sp"
        android:text="@string/decriptionMaterial" />
    <TextView
        android:id="@+id/descriptionBuild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionMaterial"
        android:layout_marginTop="20sp"
        android:text="@string/decriptionBuild" />


</RelativeLayout>